[package]
name = "rtic-rs-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
embedded-hal = "0.2.7"
nb = "1"
cortex-m = {version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
rtic-macros = "2.0.0"
rtic-sync = "1.0.1"
rtic-monotonics = {version = "1.0.0", features = ["cortex-m-systick"]}
# rtic-time = "1.0.0"
# rtic-common = "1.0.0"
[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["rt", "stm32f103", "medium"]

[dependencies.futures]
version = "0.3.26"
default-features = false
features = ["async-await"]

[dependencies.rtic]
version = "2.0.0"
features = ["thumbv7-backend"]

[dependencies.critical-section]
version = "1.1.1"
features = []

[features]
test-critical-section = ["cortex-m/critical-section-single-core", "rtic-monotonics/systick-100hz"]
